contrib/cnd.highlight/test/unit/data/org/netbeans/modules/cnd/highlight/error/UnresolvedIdentifierTest/bug210983_2.cpp

#include "inc210983_1.h"

int foo210983(struct Interp210983* i) {
    struct env210983 *e = i->env210983;
    int *a = i->env210983->savefd;  //unresolved savefd
    int *b = e->oenv->savefd;
    return *a+*b;
}
